--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,21 @@
 #main {
     background-color: #ffffff;
 }
+.floating{
+    width: 93.6vw;
+    margin-left: 50vw;
+    position: absolute;
+    left: -46.8vw;
+    text-align: center;
+    padding:4vw;
+    z-index: 999;
+    @include rounded-raised-div;
+    @include for-desktop{
+        width: 55.55vw;
+        left: -27.775vw
+        
+    }
+    .cta-pink{
+        margin: 0 auto;
+    }
+}
