--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -3,3 +3,8 @@
         @content;
     }
 }
+@mixin rounded-raised-div {
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, .1);
+}
