--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -7,16 +7,19 @@
 .two-col-block,
 .four-col-block {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-content: space-between;
-    align-items: center;
+    flex-direction: column;
+   
+    align-items: flex-start;
+    @include for-desktop{
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
+
 .two-col-block {
-    background-color: #ffffff;
-    border-radius: 20px;
-    box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, .1);
+    @include rounded-raised-div;
     margin-bottom: 11.2vw;
     padding: 10.93vw;
 
@@ -69,11 +72,8 @@
 }
 
 .four-col {
-    flex: 1 1 400px;
+    flex-basis: 365px;
 
-    @include for-desktop {
-        flex: 1;
-    }
 }
 
 img {
