--- a/css/main.css
+++ b/css/main.css
@@ -123,9 +123,6 @@ p {
 
 .two-col-left,
 .two-col-right {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 300px;
-          flex: 1 1 300px;
   padding: 0;
 }
 
@@ -133,6 +130,9 @@ p {
   .two-col-left,
   .two-col-right {
     padding-left: 8.194vw;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
 }
 
@@ -176,9 +176,11 @@ p {
   }
 }
 
-.four-col {
-  -ms-flex-preferred-size: 365px;
-      flex-basis: 365px;
+@media (min-width: 720px) {
+  .four-col {
+    -ms-flex-preferred-size: 365px;
+        flex-basis: 365px;
+  }
 }
 
 img {
@@ -234,11 +236,11 @@ header .two-col-block {
 
 #footer {
   width: 100vw;
-  height: 227.2vw;
+  height: 200vw;
   background-color: #00252e;
   color: #ffffff;
   font-family: "Open Sans", sans-serif;
-  padding: 42.666vw 5.333vw 12.8vw 5.333vw;
+  padding: 32vw 5.333vw 12.8vw 5.333vw;
   margin: 32vw auto 0 auto;
 }
 
@@ -264,13 +266,19 @@ header .two-col-block {
 
 @media (min-width: 720px) {
   #footer ul {
-    -ms-flex-item-align: end;
-        align-self: flex-end;
+    padding-left: 25%;
+    font-size: 1.111vw;
   }
 }
 
 #footer li {
   margin-bottom: 5vw;
+}
+
+@media (min-width: 720px) {
+  #footer li {
+    margin-bottom: 1.5vw;
+  }
 }
 
 #footer p {
@@ -282,9 +290,22 @@ header .two-col-block {
   background-repeat: no-repeat;
 }
 
+@media (min-width: 720px) {
+  #footer p {
+    padding-left: 2.91vw;
+    font-size: 1.111vw;
+  }
+}
+
 #footer p.address {
   background-image: url(../images/icon-location.svg);
   background-size: 5vw;
+}
+
+@media (min-width: 720px) {
+  #footer p.address {
+    background-size: 0.972vw;
+  }
 }
 
 #footer p.tel {
@@ -292,23 +313,42 @@ header .two-col-block {
   background-size: 6.1vw;
 }
 
+@media (min-width: 720px) {
+  #footer p.tel {
+    background-size: 1.527vw;
+  }
+}
+
 #footer p.email {
   background-image: url(../images/icon-email.svg);
   background-size: 7.466vw;
 }
 
-#footer .squeeze-up ul {
+@media (min-width: 720px) {
+  #footer p.email {
+    background-size: 1.597vw;
+  }
+}
+
+#footer .nav-2 ul {
   margin-top: 0;
 }
 
 @media (min-width: 720px) {
-  #footer .squeeze-up ul {
+  #footer .nav-2 ul {
     margin-top: 1.11097222vw;
   }
 }
 
-#footer .middle {
-  padding-left: 11vw;
+@media (min-width: 720px) {
+  #footer .nav-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 #footer .copyright {
@@ -320,35 +360,17 @@ header .two-col-block {
   #footer .copyright {
     text-align: right;
     font-size: 0.9vw;
+    padding-right: 1.7vw;
   }
 }
 
+#footer .contact, #footer .nav-2 {
+  padding-bottom: 7vw;
+}
+
 @media (min-width: 720px) {
-  #footer p {
-    padding-left: 2.91vw;
-    text-align: left;
-    color: #ffffff;
-    font-size: 1.111vw;
-    background-position: top left;
-    background-repeat: no-repeat;
-  }
-  #footer p.address {
-    background-image: url(../images/icon-location.svg);
-    background-size: 0.972vw;
-  }
-  #footer p.tel {
-    background-image: url(../images/icon-phone.svg);
-    background-size: 1.527vw;
-  }
-  #footer p.email {
-    background-image: url(../images/icon-email.svg);
-    background-size: 1.597vw;
-  }
-  #footer ul {
-    font-size: 1.111vw;
-  }
-  #footer li {
-    margin-bottom: 1.5vw;
+  #footer .contact, #footer .nav-2 {
+    padding-bottom: 0;
   }
 }
 
@@ -362,7 +384,7 @@ header .two-col-block {
   }
 }
 
-#footer .centered {
+#footer .social {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -370,9 +392,11 @@ header .two-col-block {
 }
 
 @media (min-width: 720px) {
-  #footer .centered {
+  #footer .social {
     -ms-flex-item-align: start;
         align-self: flex-start;
+    text-align: left;
+    padding-top: 3.7vw;
   }
 }
 
