--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,6 @@
+@mixin element-boundary {
+    border: 1px solid red;
+}
 @mixin for-desktop {
     @media (min-width: $desktop-breakpoint) {
         @content;
