--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,10 +1,10 @@
 #footer {
     width: 100vw;
-    height: 227.2vw;
+    height: 200vw;
     background-color: $huddle-cyan-dark;
     color: #ffffff;
     font-family: $body-font;
-    padding: 42.666vw 5.333vw 12.8vw 5.333vw;
+    padding: 32vw 5.333vw 12.8vw 5.333vw;
     margin: 32vw auto 0 auto;
 
     @include for-desktop {
@@ -24,13 +24,17 @@
         margin-bottom: 0;
         padding-left: 0;
         @include for-desktop{
-            align-self: flex-end;
+            padding-left: 25%;
+            font-size: 1.111vw;
         }
 
 
     }
     li{
         margin-bottom: 5vw;
+        @include for-desktop {
+            margin-bottom: 1.5vw;
+        }
     }
 
     p {
@@ -38,37 +42,53 @@
         text-align: left;
         color: #ffffff;
         font-size: 4.26vw;
-
         background-position: top left;
         background-repeat: no-repeat;
+        @include for-desktop {
+            padding-left: 2.91vw;
+            font-size: 1.111vw;
+        }
     }
 
     p.address {
         background-image: url(../images/icon-location.svg);
         background-size: 5vw;
+        @include for-desktop {
+            background-size: 0.972vw;
+        }
     }
 
     p.tel {
         background-image: url(../images/icon-phone.svg);
         background-size: 6.1vw;
+        @include for-desktop {
+            background-size: 1.527vw;
+        }
     }
 
     p.email {
         background-image: url(../images/icon-email.svg);
         background-size: 7.466vw;
+        @include for-desktop {
+            background-size: 1.597vw;
+        }
     }
     
-    .squeeze-up{
-        ul{
+    .nav-2{
+       ul{
             margin-top: 0;
             @include for-desktop{
                 margin-top: 1.11097222vw;
             }
+
         }
     
     }
-    .middle{
-        padding-left: 11vw;
+    .nav-1{
+        @include for-desktop{
+        display: flex;
+        justify-content: center;
+        }
     }
     .copyright{
         text-align: center;
@@ -76,39 +96,13 @@
         @include for-desktop{
             text-align: right;
             font-size: 0.9vw;
+            padding-right: 1.7vw;
         }
     }
-    @include for-desktop {
-        p {
-            padding-left: 2.91vw;
-            text-align: left;
-            color: #ffffff;
-            font-size: 1.111vw;
-
-            background-position: top left;
-            background-repeat: no-repeat;
-        }
-
-        p.address {
-            background-image: url(../images/icon-location.svg);
-            background-size: 0.972vw;
-        }
-
-        p.tel {
-            background-image: url(../images/icon-phone.svg);
-            background-size: 1.527vw;
-        }
-
-        p.email {
-            background-image: url(../images/icon-email.svg);
-            background-size: 1.597vw;
-        }
-
-        ul {
-            font-size: 1.111vw;
-        }
-        li{
-            margin-bottom: 1.5vw;
+    .contact, .nav-2{
+        padding-bottom: 7vw;
+        @include for-desktop{
+            padding-bottom: 0;
         }
     }
     ion-icon{
@@ -118,11 +112,13 @@
         }
         
     }
-    .centered{
+    .social{
         align-self: center;
         text-align: center;
         @include for-desktop{
             align-self: flex-start;
+            text-align: left;
+            padding-top: 3.7vw;
             
         }
 
