--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,46 +1,8 @@
-.btn-pink {
-    font-family: $body-font;
-    background-color: $huddle-pink;
-    border-radius: 100px;
-    color: #ffffff;
-    font-size: 4vw;
-    padding: 3.5vw 0;
-    width: 64.5vw;
-    font-weight: 700;
-    text-align: center;
-    box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, .1);
-
-    @include for-desktop {
-        font-size: 1vw;
-        width: 19.58vw;
-        padding: 1vw 0;
-    }
-}
-
-.btn-pink:hover,
-.btn-white:hover {
-    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .3);
-
-}
-
 .cta {
     text-decoration: none;
 }
 
-.cta-pink {
-    font-size: 3vw;
-    padding: 3vw 0;
-    width: 53.33vw;
-
-    @include for-desktop {
-        font-size: 1.5vw;
-        width: 27.77vw;
-        padding: 1.3vw 0;
-
-    }
-}
-
-.btn-white {
+.cta__btn {
     width: 26.66vw;
     border-radius: 100px;
     background-color: #ffffff;
@@ -56,5 +18,39 @@
         width: 13.888vw;
         font-size: 1.3vw;
         padding: 1vw 0;
+    }
+}
+
+.cta__btn:hover {
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .3);
+
+}
+
+.cta__btn--pink {
+
+    background-color: $huddle-pink;
+    color: #ffffff;
+    font-size: 4vw;
+    padding: 3.5vw 0;
+    width: 64.5vw;
+
+    @include for-desktop {
+        font-size: 1vw;
+        width: 19.58vw;
+        padding: 1vw 0;
+
+    }
+}
+
+.cta__btn--large {
+    font-size: 3vw;
+    padding: 3vw 0;
+    width: 53.33vw;
+
+    @include for-desktop {
+        font-size: 1.5vw;
+        width: 27.77vw;
+        padding: 1.3vw 0;
+
     }
 }
