--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,7 +13,7 @@ header p {
     color: #000000;
 }
 
-.top-bar {
+.header__top-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
